--- a/index.html
+++ b/index.html
@@ -117,75 +117,35 @@
                 <div class="row">
                     <div class="col-lg-1"></div>
                     <div class="col-lg-2">
-                        <div class="btn-group">
-                            <button class="btn  btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Any Make
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
-                            </div>
+                        <div class="badge">
+                            <div class="title">Porsche</div>
+                            <img src="images/2.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-2">
-                        <div class="btn-group">
-                            <button class="btn  btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Any Make
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
-                            </div>
+                        <div class="badge">
+                            <div class="title">Ferrari</div>
+                            <img src="images/1.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-2">
-                        <div class="btn-group">
-                            <button class="btn  btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Any Make
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>
-                            </div>
+                        <div class="badge">
+                            <div class="title">Lamborghini</div>
+                            <img src="images/3.png" alt="">
                         </div>
                     </div>
                     <div class="col-lg-2">
-                            <div class="btn-group">
-                                <button class="btn  btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Any Make
-                                </button>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="#">Separated link</a>
-                                </div>
-                            </div>
+                        <div class="badge">
+                            <div class="title">Mercedes</div>
+                            <img src="images/4.png" alt="">
                         </div>
-                        <div class="col-lg-2">
-                                <div class="btn-group">
-                                    <button class="btn  btn-lg dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Any Make
-                                    </button>
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Action</a>
-                                        <a class="dropdown-item" href="#">Another action</a>
-                                        <a class="dropdown-item" href="#">Something else here</a>
-                                        <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" href="#">Separated link</a>
-                                    </div>
-                                </div>
-                            </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="badge">
+                            <div class="title">Chevrolet</div>
+                            <img src="images/5.png" alt="">
+                        </div>
+                    </div>
                     <div class="col-lg-1"></div>
                 </div>
                 <hr>
